objects/DMAPP__AM_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Help__c</fullName>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__No_Label__c</fullName>
        <label>No Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__No_Score__c</fullName>
        <label>No Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>DMAPP__Plan_Type__c</referenceTo>
        <relationshipLabel>AM Questions</relationshipLabel>
        <relationshipName>AM_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Recommended__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Section_Heading__c</fullName>
        <label>Section Heading</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Summary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Unknown_Score__c</fullName>
        <label>Unknown Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Yes_Label__c</fullName>
        <label>Yes Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Yes_Score__c</fullName>
        <label>Yes Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AM Question</label>
    <listViews>
        <fullName>DMAPP__AM_Questions_View</fullName>
        <columns>DMAPP__Plan_Type__c</columns>
        <columns>DMAPP__Section_Heading__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__Question_Text__c</columns>
        <columns>DMAPP__Active__c</columns>
        <columns>DMAPP__Mandatory__c</columns>
        <filterScope>Everything</filterScope>
        <label>AM Questions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Plan Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>